manifest/objects/DMMAX__Context__c.object
<CustomObject>
    <fields>
        <fullName>DMMAX__AlohaURL__c</fullName>
        <label>AlohaURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Class__c</fullName>
        <label>Class</label>
        <referenceTo>DMMAX__Class__c</referenceTo>
        <relationshipName>Contexts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMMAX__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMMAX__ExternalRef__c</fullName>
        <label>ExternalRef</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__LightningURL__c</fullName>
        <label>LightningURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__MobileURL__c</fullName>
        <label>MobileURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMMAX__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Max Context</label>
    <nameField>
        <label>Context Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Max Contexts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>